--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <img class="w-100" src="images/ProfileIcon.png">
         <a class="button button1" href="profile.html">Sign In/Profile</a>
         <a class="button button2" href="results.html">Weekly Results</a>
-        <a class="button button3" href="working.html">Start Working</a>
+        <a class="button button3" href="quiz.html">Let's Get Quizzical</a>
       </div>
     </div>
   </main>
 
-  <footer><div class="circle2"></div></footer>
+  <footer><img class="w-100" src="images/bottomcircle.png"></img></footer>
 
 </body>
 
