--- a/quiz.html
+++ b/quiz.html
@@ -29,44 +29,36 @@
 <body>
 
   <header>
-    <div class="circle3"></div>
+    <div class="circle"></div>
     <div class="dropdown">
-      <button class="dropbtn">Dropdown</button>
-      <div class="dropdown-content">
-        <a href="index.html">Homepage</a>
-        <a href="results.html">Weekly Results</a>
-        <a href="quiz.html">Let's Get Quizzical</a>
-      </div>
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content">
+      <a href="index.html">Homepage</a>
+      <a href="profile.html">Sign In/Profile</a>
+      <a href="results.html">Weekly Results</a>
     </div>
+  </div>
   </header>
 
   <main>
     <div class="row">
       <div class="col-sm-6">
-        <h1>My Profile</h1>
-        <img class="w-100" src="images/ProfileIcon.png">
-      </div>
+    <h1>Let's Get Quizzical</h1>
+    <p></p>
+    <p></p>
+    <h4>This Page is for you to complete a mini quiz on a specific topic. Once you have submitted the correct answers you will be sent
+    to a social Media page where you will only have a small amount of time to browse that social media until you are brought back to the
+  UmmAhh Homepage.</h4>
+  </div>
 
-      <div class="col-sm-6">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <h2>Account Name</h2>
-        <h3>Alex_Coghlan</h3>
-        <p></p>
-        <p></p>
-        <p></p>
-        <h2>Email Address</h2>
-        <h3>alexcoghlan1001@gmail.com</h3>
-        <p></p>
-        <p></p>
-        <p></p>
-        <h2>Worst Procrastiation Habits</h2>
-        <h3>Being Stuck in a Social Media loop for countless hours</h3>
-      </div>
+    <div class="col-sm-6">
+      <h1>Choose Your Type of Quiz</h1>
+      <p></p>
+      <a class="button button1" href="riddles.html">Riddles</a>
+      <a class="button button2" href="maths.html">Maths Questions</a>
+      <a class="button button3" href="jokes.html">Jokes</a>
     </div>
+  </div>
   </main>
 
   <footer><img class="w-100" src="images/bottomcirclepink.png"></img></footer>
