--- a/results.html
+++ b/results.html
@@ -35,7 +35,7 @@
       <div class="dropdown-content">
         <a href="index.html">Homepage</a>
         <a href="profile.html">Sign In/Profile</a>
-        <a href="working.html">Get Working</a>
+        <a href="quiz.html">Let's Get Quizzical</a>
       </div>
     </div>
   </header>
@@ -46,13 +46,18 @@
     <h1>My Weekly Results</h1>
     <p></p>
     <p></p>
-    <h5>This is where you can review all of your progress from the past week and you are able to see how you can improve. It is where you are
+    <h4>This is where you can review all of your progress from the past week and you are able to see how you can improve. It is where you are
     able to see if you are a pro procrastinator and that you need to learn how to stick to a task, or whether you procrastinate on a smaller scale
-    and you only need to sort yourself out a little bit</h5>
+    and you only need to sort yourself out a little bit</h4>
     <p></p>
     <p></p>
-    <h5>But lets face it if you're here using our site... Then you probably need to sort yourself out and learn to finish a task instead of
-    doing anything but your main goal!!</h5>
+    <h4>But lets face it if you're here using our site... Then you probably need to sort yourself out and learn to finish a task instead of
+    doing anything but your main goal!!</h4>
+    <p></p>
+    <p></p>
+    <!-- <h4>By the looks of the chart to the right here... You need to learn to put your phone down and pick your pen up. You've procrastinated so much this
+    week we think it's time that you take a deep look at yourself in the mirror and sort your self out else there is no going back from the deep
+  dark hole that you've got yourself into.</h4> -->
   </div>
 
   <div class="col-sm-6">
@@ -68,7 +73,7 @@
 </div>
   </main>
 
-  <footer><div class="circle4"></div></footer>
+  <footer><img class="w-100" src="images/bottomcircle.png"></img></footer>
 
 </body>
 
