Updated files with code commenting
All files are commented

--- a/INDE502-UmmmAhhh/index.html
+++ b/INDE502-UmmmAhhh/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet"> <!-- I brought this font in from Google fonts so that I could use it throughout my application -->
 
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet">
@@ -31,14 +31,14 @@
 
   <main>
     <div class="row">
-      <div class="col-sm-6">
+       <div class="col-sm-6"> <!-- This line splits the page in half so that there are two seperate columns on the page-->
         <img class="w-100" src="images/UmmmAhhhLogo.png">
       </div>
 
-      <div class="col-sm-6">
+      <div class="col-sm-6"> <!-- This is the other column made so that. I have done this to split up all of the information so the page does not look so cluttered -->
         <img class="w-100" src="images/ProfileIcon.png">
-        <a class="button button1" href="profile.html">Sign In/Profile</a>
-        <a class="button button2" href="results.html">Weekly Results</a>
+        <a class="button button1" href="profile.html">Sign In/Profile</a> <!-- These three buttons send the user to the relevant page that they wish to look at -->
+        <a class="button button2" href="results.html">Weekly Results</a> <!-- I decided to use 'a' tags as they define a hyperlink for the app so it knows its going to send the user to a different page -->
         <a class="button button3" href="quiz.html">Let's Get Quizzical</a>
       </div>
     </div>
