--- a/INDE502-UmmmAhhh/profile.html
+++ b/INDE502-UmmmAhhh/profile.html
@@ -30,10 +30,10 @@
 
   <header>
     <div class="circle3"></div>
-    <div class="dropdown">
+    <div class="dropdown"> <!-- This defines the dropdown element on this individual page -->
       <button class="dropbtn">Dropdown</button>
-      <div class="dropdown-content">
-        <a href="index.html">Homepage</a>
+      <div class="dropdown-content"> <!-- This defines the content that is held within the dropdown element -->
+        <a href="index.html">Homepage</a> <!--These three 'a' tags show what pages the user can jump to when they hover over the dropdown element -->
         <a href="results.html">Weekly Results</a>
         <a href="quiz.html">Let's Get Quizzical</a>
       </div>
@@ -42,12 +42,12 @@
 
   <main>
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6"> <!-- This line splits the page in half so that there are two seperate columns on the page-->
         <h1>My Profile</h1>
         <img class="w-100" src="images/ProfileIcon.png">
       </div>
 
-      <div class="col-sm-6">
+      <div class="col-sm-6"> <!-- This is the other column made so that. I have done this to split up all of the information so the page does not look so cluttered -->
         <p></p>
         <p></p>
         <p></p>
