--- a/INDE502-UmmmAhhh/quiz.html
+++ b/INDE502-UmmmAhhh/quiz.html
@@ -30,9 +30,9 @@
 
   <header>
     <div class="circle"></div>
-    <div class="dropdown">
+    <div class="dropdown"> <!-- This defines the dropdown element on this individual page -->
     <button class="dropbtn">Dropdown</button>
-    <div class="dropdown-content">
+    <div class="dropdown-content"> <!-- This defines the content that is held within the dropdown element -->
       <a href="index.html">Homepage</a>
       <a href="profile.html">Sign In/Profile</a>
       <a href="results.html">Weekly Results</a>
@@ -42,7 +42,7 @@
 
   <main>
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6"> <!-- This line splits the page in half so that there are two seperate columns on the page-->
     <h1>Let's Get Quizzical</h1>
     <p></p>
     <p></p>
@@ -51,10 +51,10 @@
   UmmAhh Homepage.</h4>
   </div>
 
-    <div class="col-sm-6">
-      <h1>Choose Your Type of Quiz</h1>
+    <div class="col-sm-6"> <!-- This is the other column made so that. I have done this to split up all of the information so the page does not look so cluttered -->
+      <h1>Choose Your Type of Quiz</h1> <!-- This is where the user can select the type of quiz in order to proceed to the social media section. -->
       <p></p>
-      <a class="button button1" href="riddles.html">Riddles</a>
+      <a class="button button1" href="riddles.html">Riddles</a> <!-- These 'a' tags send the user to the different quiz pages -->
       <a class="button button2" href="maths.html">Maths Questions</a>
       <a class="button button3" href="jokes.html">Jokes</a>
     </div>
