--- a/INDE502-UmmmAhhh/openclose.html
+++ b/INDE502-UmmmAhhh/openclose.html
@@ -7,11 +7,14 @@
     <title>Social Media</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet"> <!-- Links to the css page -->
 
 </head>
 <body>
-  <header><div class="circle"></div></header>
+  <header>
+    <div class="circle"></div>
+
+  </header>
 
     <h1>UmmAhh - Social Media Gateway</h1>
     <p></p>
@@ -19,20 +22,22 @@
     Facebook, Twitter, of Instagram for a limited amount of time. Once your time is up then you will be sent back to the UmmAhh
     Homepage.</h4>
     <p></p>
-    <h4>Use the buttons below to choose which social media page you would like to go to. You then have 30 seconds to use that
+    <h4>Use the buttons below to choose which social media page you would like to go to. You then have 1 Minute to use that
     page as you please.</h4>
 
-    <button onclick="openInNewTab('https://www.facebook.com')">Facebook</button>
-    <button onclick="openInNewTab('https://www.twitter.com')">Twitter</button>
-    <button onclick="openInNewTab('https://www.instagram.com')">Instagram</button>
-
+    <button onclick="openInNewTab('https://www.facebook.com')">Facebook</button> <!-- Created an IFrame to send the user to Facebook -->
+    <button onclick="openInNewTab('https://www.twitter.com')">Twitter</button> <!-- Created an IFrame to send the user to Twitter -->
+    <button onclick="openInNewTab('https://www.instagram.com')">Instagram</button> <!-- Created an IFrame to send the user to Instagram -->
+    <a class="button button1" href="index.html">Return Home</a>
+    
+<!-- This determines how much time the user has to use their chosen social media page before they are sent back to the application -->
     <script>
         function openInNewTab(url) {
             var win = window.open(url, '_blank');
             win.focus();
             setTimeout(function(){
                     win.close()
-                }, 30000);
+                }, 100000);
             }
     </script>
 
