--- a/INDE502-UmmmAhhh/results.html
+++ b/INDE502-UmmmAhhh/results.html
@@ -30,10 +30,10 @@
 
   <header>
     <div class="circle"></div>
-    <div class="dropdown">
+    <div class="dropdown"> <!-- This defines the dropdown element on this individual page -->
       <button class="dropbtn">Dropdown</button>
-      <div class="dropdown-content">
-        <a href="index.html">Homepage</a>
+      <div class="dropdown-content"> <!-- This defines the content that is held within the dropdown element -->
+        <a href="index.html">Homepage</a> <!--These three 'a' tags show what pages the user can jump to when they hover over the dropdown element -->
         <a href="profile.html">Sign In/Profile</a>
         <a href="quiz.html">Let's Get Quizzical</a>
       </div>
@@ -42,7 +42,7 @@
 
   <main>
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6"> <!-- This line splits the page in half so that there are two seperate columns on the page-->
     <h1>My Weekly Results</h1>
     <p></p>
     <p></p>
@@ -60,9 +60,9 @@
   dark hole that you've got yourself into.</h4> -->
   </div>
 
-  <div class="col-sm-6">
-    <div class="chart">
-      <div class="bar-1"></div>
+  <div class="col-sm-6"> <!-- This is the other column made so that. I have done this to split up all of the information so the page does not look so cluttered -->
+    <div class="chart"> <!-- This declares the bar chart on the right hand side of the page -->
+      <div class="bar-1"></div> <!-- These following 7 lines show how many bars are going to be within the chart -->
       <div class="bar-2"></div>
       <div class="bar-3"></div>
       <div class="bar-4"></div>
