Updated with commenting
In this commit, you will see that the code has been changed so that the submit button on each of the quiz pages only shows up when the user has answered and submitted their answers

--- a/INDE502-UmmmAhhh/index.html
+++ b/INDE502-UmmmAhhh/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet"> <!-- I brought this font in from Google fonts so that I could use it throughout my application -->
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 
   <main>
     <div class="row">
-       <div class="col-sm-6"> <!-- This line splits the page in half so that there are two seperate columns on the page-->
+      <div class="col-sm-6"> <!-- This line splits the page in half so that there are two seperate columns on the page-->
         <img class="w-100" src="images/UmmmAhhhLogo.png">
       </div>
 
