--- a/INDE502-UmmmAhhh/jokes.html
+++ b/INDE502-UmmmAhhh/jokes.html
@@ -20,10 +20,10 @@
 <button id="previous">Previous Question</button> <!-- Loads the previous question in the quiz -->
 <button id="next">Next Question</button> <!-- Loads the next question in the quiz -->
 <button id="submit">Submit Quiz</button> <!-- Once all of the questions are answered the user can submit them -->
-<button id="socialmedia">Social Media</button> <!-- This sends the user to the social media where they are able to select what social media they want to interact with. -->
+<a id="socialmedia" href="openclose.html" class="hide">Social Media</a> <!-- This sends the user to the social media where they are able to select what social media they want to interact with. -->
 <div id="results"></div> <!-- This displays the results of the questions they answered -->
 
-  <script src="..\js\quiz.js"></script> <!-- This links to the relevant JavaScript file for this quiz page -->
+  <script src="..\js\quiz.js"></script>
 
   <script type ="text/javascript">
     what();
