--- a/INDE502-UmmmAhhh/riddles.html
+++ b/INDE502-UmmmAhhh/riddles.html
@@ -20,9 +20,8 @@
 <button id="previous">Previous Question</button> <!-- Loads the previous question in the quiz -->
 <button id="next">Next Question</button> <!-- Loads the next question in the quiz -->
 <button id="submit">Submit Quiz</button> <!-- Once all of the questions are answered the user can submit them -->
-<!-- <a class="button button3" href="openclose.html">Social Media</a> -->
-<button id="socialmedia">Social Media</button> <!-- This sends the user to the social media where they are able to select what social media they want to interact with. -->
-<div id="results"></div> <!-- This displays the results of the questions they answered -->
+<a id="socialmedia" href="openclose.html" class="hide">Social Media</a> <!-- This sends the user to the social media where they are able to select what social media they want to interact with. -->
+<div id="results"></div>
 
   <script src="..\js\quizriddles.js"></script> <!-- This links to the relevant JavaScript file for this quiz page -->
 
@@ -30,20 +29,9 @@
     what();
     function what(){
         document.getElementById('previous').innerHTML = 'Previous Question';
+        document.getElementById('next').innerHTML = 'Next Question';
+        document.getElementById('submit').innerHTML = 'Submit';
     };
-
-        what();
-        function what(){
-            document.getElementById('next').innerHTML = 'Next Question';
-        };
-            what();
-            function what(){
-                document.getElementById('submit').innerHTML = 'Submit';
-            };
-              what();
-              function what(){
-                  document.getElementById('socialmedia').innerHTML = 'Social Media';
-                };
 
   </script>
 
